UserCode/mdk/.vscode/uv4.log
*** Using Compiler 'V6.21', folder: 'E:\stm32\keil5\ARM\ARMCLANG\Bin'
Build target 'mm32f327x_g8p_project'
compiling zf_driver_adc.c...
compiling zf_common_fifo.c...
compiling zf_common_debug.c...
compiling main.c...
compiling isr.c...
compiling zf_driver_soft_spi.c...
compiling zf_driver_sdio.c...
compiling zf_driver_timer.c...
compiling zf_device_bluetooth_ch9141.c...
compiling zf_common_font.c...
compiling zf_device_camera.c...
compiling zf_driver_uart.c...
compiling zf_driver_dma.c...
compiling zf_driver_flash.c...
compiling zf_common_function.c...
compiling zf_device_absolute_encoder.c...
compiling zf_driver_iic.c...
compiling zf_driver_pwm.c...
compiling zf_driver_encoder.c...
compiling zf_driver_exti.c...
compiling zf_device_dm1xa.c...
compiling zf_driver_pit.c...
compiling zf_driver_dac.c...
compiling zf_common_clock.c...
compiling zf_driver_gpio.c...
compiling zf_common_interrupt.c...
compiling zf_device_imu660ra.c...
compiling zf_driver_delay.c...
compiling zf_device_icm20602.c...
compiling zf_device_mpu6050.c...
compiling zf_device_imu963ra.c...
compiling zf_device_key.c...
compiling zf_device_gps_tau1201.c...
compiling zf_device_mt9v03x.c...
compiling zf_driver_soft_iic.c...
compiling zf_driver_spi.c...
compiling zf_device_ov7725.c...
compiling zf_device_dl1a.c...
compiling zf_device_scc8660.c...
compiling zf_device_ips114.c...
compiling zf_device_type.c...
compiling zf_device_virtual_oscilloscope.c...
compiling zf_device_oled.c...
compiling zf_device_sdcard.c...
compiling zf_device_tsl1401.c...
compiling zf_device_ips200.c...
compiling zf_device_tft180.c...
compiling zf_device_wireless_uart.c...
compiling system_mm32f3277g.c...
compiling zf_device_wifi_uart.c...
assembling startup_mm32f3277g.s...
compiling hal_comp.c...
compiling hal_dac.c...
compiling hal_dma.c...
compiling hal_adc.c...
compiling hal_exti.c...
compiling hal_fsmc.c...
compiling hal_iwdg.c...
compiling hal_gpio.c...
compiling hal_rcc.c...
compiling hal_i2c.c...
compiling hal_rtc.c...
compiling hal_sdio.c...
compiling hal_spi.c...
compiling hal_syscfg.c...
compiling hal_tim_16b.c...
compiling hal_tim_32b.c...
compiling hal_tim_basic.c...
compiling hal_tim_adv.c...
compiling hal_uart.c...
compiling diskio.c...
compiling hal_wwdg.c...
compiling ffsystem.c...
compiling hal_usb.c...
compiling ffunicode.c...
compiling Encoder.c...
compiling Motor.c...
compiling Sensor.c...
../System/PID.c(6): error: 'mMenu.h' file not found
    6 | #include "mMenu.h"
      |          ^~~~~~~~~
1 error generated.
compiling PID.c...
compiling BuzzerAndLED.c...
compiling Kfilter.c...
compiling Menu.c...
compiling ff.c...
".\Objects\MM32F327X_G8P.axf" - 1 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:09
